<resources>
    <string name="style_square">square_box</string>
    <string name="style_rounded">rounded_box</string>
    <string name="style_underline">underline</string>
    <string name="style_rounded_underline">rounded_underline</string>
    <string name="mask_character">\u2022</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="network_status_permission">Network status permission</string>
    <string name="network_Status_permission_message">In order to use app. we require to allow access to network status\n
    to check whether you have internet or not</string>
    <string name="network_Status_setting_message"><![CDATA[access network status permission has been denied forever/nYou must you like go to setting to enable it?]]></string>
    <string name="camera_permission_message">In order to change your profile image you must allow camera permission\nDo you want to proceed?</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="camera_permission_setting_message"><![CDATA[camera permission has been denied forever\nYou must you like go to setting to enable it?]]></string>
    <string name="sms_permission">SMS Permission</string>
    <string name="sms_permission_message">In order for fast accessing otp from your SMS you must allow SMS permission\nDo you want to proceed?</string>
    <string name="sms_permission_setting_message"><![CDATA[SMS permission has been denied forever\nwould must you like go to setting to enable it?]]></string>
    <string name="write_external_storage">Write external storage</string>
    <string name="write_external_storage_message">In order to change your profile you must allow files permission\nDo you want to proceed?</string>
    <string name="write_external_storage_permission_setting_message"><![CDATA[Wright media & files permission has been denied forever\nYou must you like go to setting to enable it?]]></string>
    <string name="read_external_storage">Read external storage</string>
    <string name="read_external_storage_message">In order to change your profile you must allow read files permission\nDo you want to proceed?</string>
    <string name="read_external_storage_setting_message"><![CDATA[Read file & media permission has been denied forever\nWould you like go to setting to enable it?]]></string>
    <string name="permission_header_dialog">Core fundamental are based on these permissions</string>
    <string name="app_name">mocaspaces</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="my_workspace_coffee_assistant"><![CDATA[My office & Coffee Assistant]]></string>
    <string name="_2021_copolitan_all_right_reserved">©2021 Copolitan. All rights reserved</string>
    <string name="hello">Hello,</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continueText">Continue</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="sign_up_under_line"><u>Sign Up</u></string>
    <string name="share_message">Share with</string>
    <string name="home">Home</string>
    <string name="my_bookings">My Bookings</string>
    <string name="my_passes">My Passes</string>
    <string name="notification">Notification</string>
    <string name="my_profile">My Profile</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="close_app">Close moca</string>
    <string name="close_app_message">Are you sure you want to exist moca?</string>
    <string name="ok">OK</string>
    <string name="close">close</string>
    <string name="connection_lost">Connection Lost!</string>
    <string name="please_check_your_connection_and_swipe_down_to_try_again">Please check your connection and\nswipe down to try again.</string>
    <string name="email_required">Email required</string>
    <string name="required">required</string>
    <string name="prompt_info_title">moca spaces</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">moca is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="sign_up_">Sign Up!</string>
    <string name="register">register</string>
    <string name="verify_mobile">Verify mobile</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="mobile_number">mobile number</string>
    <string name="verify">Verify</string>
    <string name="a_verification_code_will_be_sent_on_this_mobile_number">A verification code will be sent on\nthis mobile number</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="please_upload_a_clear_picture_of_your_face">Please upload a clear picture\nof your face.</string>
    <string name="error">Error</string>
    <string name="invalide_mobile_number">Invalid mobile number</string>
    <string name="we_have_sent_you_a_verification_code_on">We have sent you a verification code on</string>
    <string name="change_number">Change Number</string>
    <string name="remaining">Remaining %1$s</string>
    <string name="resend"><u>Resend</u></string>
    <string name="send_again"><u>Send Again</u></string>
    <string name="wrong_verification_code">Wrong verification code. please try again</string>
    <string name="mobile_otp">Mobile Otp</string>
    <string name="please_enter_the_verification_code_above">Please enter the verification code above</string>
    <string name="otp_send_block_message">You have been blocked from receiving SMS to this number for 2 hours</string>
    <string name="warning">Warning</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_am_a">I am a</string>
    <string name="company">Company</string>
    <string name="job_title">Job Title</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="create_account">Create Account</string>
    <string name="personal_info">Personal Info</string>
    <string name="confirm">Confirm</string>
    <string name="birth_date_error_message">Date of birth must be bigger than 16 years</string>
    <string name="try_again">Try Again</string>
    <string name="scanning">Scanning</string>
    <string name="success_request">Success</string>
    <string name="add_manually">Add Manually</string>
    <string name="or">Or</string>
    <string name="scan">Scan</string>
    <string name="student_verify_message">Please upload your proof of enrolment (University Card) to an accredited University. This will give you access to discounted seasonal Bundles for Students only.</string>
    <string name="step_1">Step 1</string>
    <string name="university_card_front">University card/ Front</string>
    <string name="step_2">Step 2</string>
    <string name="university_card_back">University card/ Back</string>
    <string name="expiry_date">Expiry date</string>
    <string name="step_3">Step 3</string>
    <string name="skip"><u>Skip</u></string>
    <string name="next">Next</string>
    <string name="verify_student">Student Verification</string>
    <string name="verify_your_e_mail">Verify your e-mail!</string>
    <string name="sent_email">We sent a verification code on your email</string>
    <string name="email_enter_verification_code">please enter the verification code below:</string>
    <string name="didn_t_receive_a_mail">Didn\'t receive a mail?</string>
    <string name="change_email">Change Email</string>
    <string name="current_password">Current Password</string>
    <string name="your_password_must_have_at_least">Your password must have at least</string>
    <string name="at_least_8_characters">At Least 8 Characters</string>
    <string name="at_least_1_uppercase_amp_1_lowercase_characters"><![CDATA[At Least 1 Uppercase & 1 lowercase characters]]></string>
    <string name="at_least_1_number">At Least 1 Number</string>
    <string name="at_least_1_special_characters">At Least 1 Special characters</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password_saved">Password Saved!</string>
    <string name="now_you_can_login_to_your_account_with_your_new_password">Now you can login to your account with your new password</string>
    <string name="go_to_login">Go to login</string>
    <string name="reset_password">Reset Password?</string>
    <string name="your_new_password_must_be_different_from_your_previous_used_passwords">Your new password must be different from your previous used passwords.</string>
    <string name="reset_password_without_question_mark">Reset Password</string>
    <string name="forgot_password_with_question_mark">Forgot Password?</string>
    <string name="password_not_matach">Confirm passwrod not mataching password</string>
    <string name="awesome">Awesome!</string>
    <string name="let_s_get_to_work">Let’s Get to Work!</string>
    <string name="success_register">Success Register</string>
    <string name="active_session_time_remaining_1_s">Active Session - Time Remaining %1$s</string>
    <string name="open">Open</string>
    <string name="opening_hours">Opening hours</string>
    <string name="book">Book</string>
    <string name="tailored">Tailored</string>
    <string name="tailored_starting">Tailored starting</string>
    <string name="hour">hour</string>
    <string name="hourly_starting">Hourly starting</string>
    <string name="day_pass">Day Pass</string>
    <string name="bundle_starting">Bundle Starting</string>
    <string name="all_text">All</string>
    <string name="to">to</string>
    <string name="denied_permission_message_settings">These permissions are denied: %1$s \nYou will redirect to settings to enable them to you this feature</string>
    <string name="capacity">Capacity</string>
    <string name="pax">Pax</string>
    <string name="check_price">Check Price</string>
    <string name="starting_at">Starting at</string>
    <string name="back">Back</string>
    <string name="findMeA">Find me a</string>
    <string name="workspace">Workspace</string>
    <string name="biz_lounge">Biz Lounge</string>
    <string name="event_space">Eventspace</string>
    <string name="meeting_space">Meeting Space</string>
    <string name="no_result_found">No result found</string>
    <string name="km_away">km away</string>
    <string name="favourite">Favourite</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="pax_filter">%1$s pax</string>
    <string name="check_space">Check Space</string>
    <string name="back_to_search">Back to search</string>
    <string name="food_menu">Food Menu</string>
    <string name="choose_a_plan">Choose a Plan</string>
    <string name="about">About</string>
    <string name="address">Address</string>
    <string name="take_a_closer_look">Take a closer look</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="payment_cancelled">Payment cancelled</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hourly">Hourly</string>
    <string name="starts_from">Starts from</string>
</resources>