<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/my_bookings"
        android:enabled="true"
        android:icon="@drawable/ic_my_bookings"
        android:title="@string/my_bookings" />

    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/my_profile" />
</menu>