<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <com.technopolitan.mocaspaces.customWheelPicker.WheelYearPicker
        android:id="@+id/wheel_date_picker_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/wheel_date_picker_year_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:text="@string/Year"
        android:textColor="#536D8A" />

    <com.technopolitan.mocaspaces.customWheelPicker.WheelMonthPicker
        android:id="@+id/wheel_date_picker_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/wheel_date_picker_month_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:text="@string/Month"
        android:textColor="#536D8A" />

    <com.technopolitan.mocaspaces.customWheelPicker.WheelDayPicker
        android:id="@+id/wheel_date_picker_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/wheel_date_picker_day_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:text="@string/Day"
        android:textColor="#536D8A" />
</LinearLayout>