<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_text_input_layout"
        style="@style/text_input_layout_style.dark_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/accent_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_edit_text"
            style="@style/edit_text_style.black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/password_validation_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/new_password_text_input_layout"
        app:layout_constraintStart_toStartOf="@id/new_password_text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/new_password_text_input_layout">

        <TextView
            android:id="@+id/your_password_must_have_text_view"
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_password_must_have_at_least"
            android:textColor="@color/dark_grey_color_80_percent"
            android:textSize="@dimen/_14sdp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/eight_char_at_least_text_view"
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:drawableStart="@drawable/ic_two_tone_close_purble"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:text="@string/at_least_8_characters"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_11sdp"
            app:drawableTint="@color/accent_color" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/upper_lower_case_text_view"
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:drawableStart="@drawable/ic_two_tone_close_purble"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:text="@string/at_least_1_uppercase_amp_1_lowercase_characters"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_11sdp"
            app:drawableTint="@color/accent_color" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/one_number_at_least_text_view"
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:drawableStart="@drawable/ic_two_tone_close_purble"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:text="@string/at_least_1_number"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_11sdp"
            app:drawableTint="@color/accent_color" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/special_char_at_least_text_view"
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:drawableStart="@drawable/ic_two_tone_close_purble"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:text="@string/at_least_1_special_characters"
            android:textColor="@color/accent_color"
            android:textSize="@dimen/_11sdp"
            app:drawableTint="@color/accent_color" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/re_password_text_input_layout"
        style="@style/text_input_layout_style.dark_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13sdp"
        android:hint="@string/re_enter_password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/accent_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_validation_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/re_password_edit_text"
            style="@style/edit_text_style.black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>