<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/accent_color"
    tools:context=".ui.login.LoginFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/moca_yellow_logo"
                android:layout_width="@dimen/_133sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/ic_moca"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/yellow_color" />

            <TextView
                android:id="@+id/hello_text_view"
                style="@style/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_37sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/moca_yellow_logo" />

            <TextView
                android:id="@+id/welcome_back_text_view"
                style="@style/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_37sdp"
                android:text="@string/welcome_back"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hello_text_view" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                style="@style/text_input_layout_style.white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:hint="@string/email"
                app:endIconCheckable="false"
                app:endIconDrawable="@drawable/ic_checkmark"
                app:endIconMode="custom"
                app:endIconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_back_text_view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    style="@style/edit_text_style.white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:drawableStart="@drawable/ic_email"
                    android:inputType="textEmailAddress" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                style="@style/text_input_layout_style.white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/password"
                app:endIconCheckable="true"
                app:endIconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_text_input_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    style="@style/edit_text_style.white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:drawableStart="@drawable/ic_password"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forget_password_text_view"
                style="@style/regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />

            <com.technopolitan.mocaspaces.transitionButton.TransitionButton
                android:id="@+id/login_btn"
                style="@style/progress_button_style.white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:text="@string/continueText"
                android:textColor="@color/dark_grey_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forget_password_text_view" />


            <TextView
                android:id="@+id/or_sign_in_with_text_view"
                style="@style/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/or_sign_in_with"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_btn" />

            <LinearLayout
                android:id="@+id/biometric_login_layout"
                style="@style/default_field_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:visibility="visible"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or_sign_in_with_text_view">

                <ImageView
                    android:id="@+id/finger_print_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_finger_print"
                    app:tint="@color/white" />

                <TextView
                    style="@style/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/biometric_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/biometric_login_layout">

                <TextView
                    style="@style/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_not_have_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/sign_up_text"
                    style="@style/medium"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/sign_up_under_line"
                    android:textColor="@color/yellow_color"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>